nginx files must be in writeable location

--- a/nginx.conf
+++ b/nginx.conf
@@ -7,12 +7,8 @@ server {
   # server_name example.com;
 
   root /home/deploy/apps/server/current/public;
-
-  # todo: these should probably be moved to shared
-  # this file is then copied or symlinked to sites-enabled
-  #
-  access_log /home/deploy/apps/server/current/log/nginx.access.log;
-  error_log /home/deploy/apps/server/current/log/nginx.error.log info;
+  access_log /var/log/nginx.access.log;
+  error_log /var/log/nginx.error.log info;
 
   location ^~ /assets/ {
     gzip_static on;
